# Loop-hive

./: .dockerignore  .env.example  .gitignore  DEPLOY_NORTHFLANK.md  DEPLOY_ORACLE.md  PROJECT_STATUS.md  README.md  _execlog.txt  _prodlog.txt  _vlog.txt  main.py  pyproject.toml
agents/: __init__.py  analyzer_agent.py  code_builder.py  compliance_agent.py  content_critic.py  content_writer.py  email_agent.py  legal_researcher.py  marketing_agent.py  monthly_evaluator.py  niche_scout.py  orchestrator.py  outreach_agent.py  plagiarism_checker.py  planner_agent.py  product_creator.py  product_critic_agent.py  product_orchestrator.py  research_agent.py
compliance/: __init__.py  disclosure_templates.py  platform_policies.py  rulebook.py
core/: __init__.py  agent_base.py  artifacts.py  budget_manager.py  config.py  jobs.py  llm_router.py  loop_engine.py  notify.py  research_tools.py  sandbox.py  team.py  text_clean.py
dashboard/: __init__.py  app.py  routes.py
dashboard/static/: main.js  style.css
deploy/: loophive.service
deployment/: Dockerfile  docker-compose.yml
publishers/: __init__.py  ebook_builder.py  email_reader.py  email_sender.py  github_publisher.py  medium_publisher.py  product_distributor.py  social_poster.py  static_site_builder.py  substack_publisher.py  telegram_poster.py  twitter_poster.py
quality/: __init__.py  originality_scorer.py  plagiarism.py  readability.py
revenue/: __init__.py  earnings_report.py
storage/: __init__.py  database.py
tests/: __init__.py  test_loop_engine.py  test_orchestrator.py  test_quality.py
(+19 files in other folders)
