[project]
name = "loophive"
version = "0.1.0"
description = "Autonomous money-making AI agent swarm built on loop engineering"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "apscheduler>=3.10.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.13.0",
    "markdown>=3.7",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "tenacity>=9.0.0",
    "structlog>=24.0.0",
    "tiktoken>=0.7.0",
    "feedparser>=6.0.0",
    "python-multipart>=0.0.9",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools]
packages = ["core", "agents", "quality", "revenue", "storage", "dashboard", "compliance", "publishers"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
